--- a/app/src/main/res/layout/gallery_item.xml
+++ b/app/src/main/res/layout/gallery_item.xml
@@ -59,7 +59,8 @@
             android:background="#fff"
             android:src="@drawable/ic_bookmark_border_black_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            android:onClick="btnAddFav"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -88,6 +89,24 @@
                 android:text="Rating" />
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/textview_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:text="Type trip"/>
+        <TextView
+            android:id="@+id/textview_start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:text="Start date"/>
+        <TextView
+            android:id="@+id/textview_end"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:text="End date"/>
         <android.support.constraint.Guideline
             android:id="@+id/guideline"
             android:layout_width="wrap_content"
